<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_24"
        android:title="@string/maps" />

    <item
        android:id="@+id/action_add_story"
        android:icon="@drawable/ic_add_circle_outline_24"
        android:title="@string/add" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/setting" />
</menu>