...
            app:icon="@drawable/ic_info_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_locale_setting" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_logout"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/logout"
...
